Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16132

Remote debugging fails to start

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.0.0
    • Qt Creator 4.0.0-rc1
    • Debugger
    • None
    • Host is running Ubuntu 14.04, 64-bit. Target is running Yocto Linux, kernel 3.14.
    • 94879fb2bf6a59f774a1e59ce4f1d3c38f2d2a17

      GDB fails to start on a remote Generic Linux device. The error message is "Cannot debug: Local executable is not set". The project's Run configuration is setup with a "Custom Executable (on a remote Linux Host)". The run configuration does specify a valid local executable. The same project can be used with QT Creator 3.5.1 to successfully perform remote debugging. The project was originally created with 3.5.1.

      Attached is a file with a couple of sections of the project's creator.user file for reference.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            trbarber95 Tim Barber
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes