RemoteLinux: Re-enable debugging of custom executables

Task-number: QTCREATORBUG-16132
Change-Id: Ic423c0ab9d0f95eb27b185a6cdee8ad54e7f4e6c
Reviewed-by: Christian Kandeler <christian.kandeler@theqtcompany.com>